objects/nFORCE__Screen_Section__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Are_Columns_Sortable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to allow users to sort columns on screen sections. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to allow users to sort columns on screen sections.</inlineHelpText>
        <label>Are Columns Sortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Auto_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to allow the screen section to auto-save field values after the user stops typing.</description>
        <label>Auto Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Break_Page_After__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is false. When the value is set to true, the credit memo export PDF breaks after this section. This field is accessible to the user from credit memo view and the value is updated when user clicks on Insert Page Break or Remove Page Break.</description>
        <inlineHelpText>Forces a page break after the section when printing.</inlineHelpText>
        <label>Break Page After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Break_Page_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is false. When the value is set to true, the credit memo export PDF breaks before the section. This field is not accessible to the user and can be set by an administrator to set required page breaks.</description>
        <inlineHelpText>Forces a page break before the section when printing.</inlineHelpText>
        <label>Break Page Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
        <description>This field is optional and must be manually populated. It stores the Forms syntax that is used to determine whether a conditional screen section should be displayed.</description>
        <label>Conditional Display Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Default_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by UI framework. The default value is false. When this value is set to true, the section displays as editable by default.</description>
        <label>Default Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Default_Rendered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is false. When this value is set to true, the section is rendered by default. When this value is set to false, the section is show as minimized with header only and the user must click on View More link to render the entire section.</description>
        <label>Default Rendered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Disable_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The admin manually populates this field. This field is not used if &quot;nFORCE__Disable_Print__c&quot; is enabled on nFORCE__Screen__c. Otherwise, when this field is enabled, screen sections are not printed. If disabled, the screen section prints if it is expanded at the time the admin prints. By default, this is disabled.</description>
        <label>Disable Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Display_Order__c</fullName>
        <description>This field is optional, but should be filled out. It is manually populated by the admin. This field determines the display order of screen sections inside of a screen using ascending order. It is recommended to use multiples of 10, so that screen sections can be inserted at a later date without having to reset all of the screen sections.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Display_Toggle_Effect__c</fullName>
        <description>This field is optional. The admin manually populates this field. It controls the type of animation when closing or opening a screen section in the credit memo. By default, it is slide.</description>
        <label>Display Toggle Effect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fade</fullName>
                </value>
                <value>
                    <fullName>slide</fullName>
                    <default>true</default>
                    <label>slide</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Display_Toggle_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is true and allows the Header to be clicked to render the minimized section.</description>
        <label>Display Toggle Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Display_Toggle_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is false. When selected, it allows the show/hide link to appear to the right, and once clicked, it expands the section.</description>
        <label>Display Toggle Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Headless__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is false. When set to true, the section will render with no header and will render with the previous section.</description>
        <label>Headless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is used by Credit Memo framework. The default value is false. When the value is set to true, the section is condired inactive. On a credit memo view or PDF, inactive sections will not be displayed. On credit memo templates, inactive sections will not be cloned when that template is selected from Credit Memo selection page.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Instructions_Text__c</fullName>
        <description>This field is optional and is used by Credit Memo framework. The default value is empty. The administrator may use this field to display instructions on credit memo view. These instructions will not be included in PDF export.</description>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The admin manually populates this field. It controls whether fields are able to be edited when the screen section is being used by a route.</description>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Layout__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is currently not being used.</description>
        <label>Layout</label>
        <referenceTo>nFORCE__Layout__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Number_of_Columns__c</fullName>
        <description>This field is manually set. If the screen section is displaying a table, this field will specify the number of columns that will be displayed in the table.</description>
        <inlineHelpText>If the screen section is displaying a table, this is the number of columns that will be displayed in the table.</inlineHelpText>
        <label>Number of Columns</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. It is optional. This field is used for conditional field rendering. It specifies the screen section a conditional screen section is associated to.</description>
        <label>Parent Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen_View__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is automatically populated by the Layout Builder tool on the screen section. This field specifies the screen view associated with the screen section. This field is typically used with the credit memo. It provides the credit memo with the code used to generate the fields and their layout.</description>
        <label>Screen View</label>
        <referenceTo>nFORCE__View__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen__c</fullName>
        <description>This field is optional. It is automatically populated whenever a screen section is created from the screen. This field specifies the screen associated with the screen section.</description>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__Section_Resource__c</fullName>
        <description>This field is required. It is manually populated. This field specifies how the screen section obtains the data to be displayed. The values SObjectScreenResource and ConfiguredSObjectScreenResource use coded screen resources to display data. The values MappedSObjectScreenResource, MappedSObjectHierarchyScreenResource, MappedSObjectListScreenResource, and ReferenceFilteredHierarchyScreenResource use the Layout Builder tool to determine what data to display.</description>
        <label>Section Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SObjectScreenResource</fullName>
                </value>
                <value>
                    <fullName>ConfiguredSObjectScreenResource</fullName>
                </value>
                <value>
                    <fullName>MappedSObjectScreenResource</fullName>
                </value>
                <value>
                    <fullName>MappedSObjectHierarchyScreenResource</fullName>
                </value>
                <value>
                    <fullName>MappedSObjectListScreenResource</fullName>
                </value>
                <value>
                    <fullName>ReferenceFilteredHierarchyScreenResource</fullName>
                </value>
                <value>
                    <fullName>ContextRecordScreenResource</fullName>
                </value>
                <value>
                    <fullName>RelatedHierarchyScreenResource</fullName>
                </value>
                <value>
                    <fullName>GrandchildScreenResource</fullName>
                </value>
                <value>
                    <fullName>ComparableScreenResource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Validation_Service__c</fullName>
        <description>The system automatically populates this optional text field to provide the name of a cross-package validation service for custom validation on a screen section. By default, it is null.</description>
        <label>Validation Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Widget__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is manually populated.  This field specifies the widget associated with the screen section. It is used to store code for customizable components of the credit memo and UI, such as the ckEditor in Credit Memo.</description>
        <label>Widget</label>
        <referenceTo>nFORCE__Widget__c</referenceTo>
        <relationshipLabel>Screen Sections</relationshipLabel>
        <relationshipName>Screen_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. This field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__sObject_Type__c</fullName>
        <description>This field is required. The admin manually populates it. This field specifies the object the screen section displays information on. Additional child or parent objects of the object can also be used to display data by using the Layout Builder tool.</description>
        <label>sObject Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Loan__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Product_Package__c</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Application__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Collateral__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Debt__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Legal_Entities__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Contingent_Liabilty__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Treasury_Service__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Treasury_Service_Involvement__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Deposit__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Funding_Method__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Fee__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Connection__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Address__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Fee_Loan_Aggregate__c</fullName>
                </value>
                <value>
                    <fullName>LLC_BI__Income__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nPortal__Portal_Header_Text__c</fullName>
        <description>A special header field which differs from the internal representation of the Section for use in Customer Portal when displaying a Section to external users.</description>
        <inlineHelpText>This value is displayed in Customer Portal for Sections which are used for dynamic UI generation, such as a page on an Online Application, and varies from header text which might appear internally.</inlineHelpText>
        <label>Portal Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Portal_Subheader_Text__c</fullName>
        <description>An optional subheader field which will display supplementary text with the header.</description>
        <inlineHelpText>This optional value provides supplementary text to go with the Portal Header Text field.</inlineHelpText>
        <label>Portal Subheader Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Screen Section</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Screen__c</columns>
        <columns>nFORCE__Headless__c</columns>
        <columns>nFORCE__Display_Order__c</columns>
        <columns>nFORCE__Instructions_Text__c</columns>
        <columns>nFORCE__Screen_View__c</columns>
        <columns>nFORCE__Section_Resource__c</columns>
        <columns>nFORCE__sObject_Type__c</columns>
        <columns>nFORCE__Layout__c</columns>
        <columns>nFORCE__Widget__c</columns>
        <columns>nFORCE__Is_Editable__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Screen Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nFORCE__Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(nFORCE__Section_Resource__c) )</errorConditionFormula>
        <errorDisplayField>nFORCE__Section_Resource__c</errorDisplayField>
        <errorMessage>Please select a section resource.</errorMessage>
    </validationRules>
</CustomObject>